--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -67,6 +67,39 @@
                            (closed)="panelOpenState = false">
         <mat-expansion-panel-header>
           <mat-panel-title>
+            Colour intensity
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <button (click)="resetToDefault()" color="primary" mat-raised-button>
+          Reset to default
+        </button><p> </p>
+        Invert
+        <mat-slider
+          thumbLabel
+          (change)="this.onInvertChange($event)"
+          min="1"
+          max="100"></mat-slider><p> </p>
+        Hue
+        <mat-slider
+          thumbLabel
+          (change)="this.onHueChange($event)"
+          min="0"
+          max="360"></mat-slider><p> </p>
+        Saturation
+        <mat-slider
+          thumbLabel
+          (change)="this.onSaturationChange($event)"
+          min="1"
+          max="100"></mat-slider><p> </p>
+      </mat-expansion-panel>
+    </mat-accordion><p> </p>
+
+
+    <mat-accordion>
+      <mat-expansion-panel (opened)="panelOpenState = true"
+                           (closed)="panelOpenState = false">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
             Layers
           </mat-panel-title>
         </mat-expansion-panel-header>
@@ -91,13 +124,16 @@
         </mat-expansion-panel-header>
         <mat-tab-group animationDuration="0ms">
           <mat-tab label="Section ID">
-            Enter section brain id to navigate to a particular section.
-            <div class="example-small-box mat-elevation-z4">
-              <mat-form-field appearance="standard">
-                <mat-label>Section brain ID</mat-label>
-                <input matInput placeholder="E.g. 1412">
-              </mat-form-field>
-            </div>
+            <br>
+            <mat-form-field appearance="standard">
+              <mat-label>Brain ID</mat-label>
+              <input matInput placeholder="E.g. 4240">
+            </mat-form-field>
+            <mat-form-field appearance="standard">
+              <mat-label>Section No</mat-label>
+              <input matInput placeholder="E.g. 0025">
+            </mat-form-field>
+            <br>
           </mat-tab>
           <mat-tab label="Second">
             <div class="example-small-box mat-elevation-z4">
