--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,21 +2,22 @@
    <button mat-icon-button class="example-icon" (click)="drawer.toggle()" aria-label="Example icon-button with menu icon">
     <mat-icon>menu</mat-icon>
   </button>
-  <span>Next Gen Viewer</span>
+  <span>Next Gen Viewer</span>&nbsp;&nbsp;
+  <button (click)="this.deleteDrawing()" mat-raised-button>
+    <mat-icon>undo</mat-icon>
+  </button>&nbsp;
+  <button (click)="this.redoDrawing()" mat-raised-button>
+    <mat-icon>redo</mat-icon>
+  </button>&nbsp;
+  <button color="accent" (click)="showFillerREPL = !showFillerREPL" mat-raised-button>
+    Toggle REPL
+  </button>&nbsp;
   <span class="example-spacer"></span>
   <p>  </p>
-  <button (click)="openSnackBar('Saving GeoJSON to firebase', 'Dismiss')" color="accent" mat-raised-button>
-    Save GeoJSON
-  </button>
-  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-    <mat-icon>favorite</mat-icon>
-  </button>
   <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
    <mat-icon>share</mat-icon>
   </button>
-  <button color="accent" (click)="showFillerREPL = !showFillerREPL" mat-raised-button>
-    Toggle REPL
-  </button>
+  
 </mat-toolbar>
 
 
@@ -27,12 +28,36 @@
   <mat-drawer #drawer class="example-sidenav" mode="side">
 
     <mat-accordion>
-      <button (click)="this.deleteDrawing()" mat-raised-button>
-        <mat-icon>undo</mat-icon>
-      </button>
-      <button (click)="this.redoDrawing()" mat-raised-button>
-        <mat-icon>redo</mat-icon>
-      </button><p> </p>
+      <mat-expansion-panel (opened)="panelOpenState = true"
+                           (closed)="panelOpenState = false">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Brain Information
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <br>
+        <mat-form-field appearance="standard">
+          <mat-label>Section No</mat-label>
+          <input (change)="this.emailUpdated($event)" matInput placeholder="E.g. 0025">
+        </mat-form-field>
+        <mat-card-actions>
+          <button (click)="this.brainIDUpdated()" mat-raised-button>Submit</button>
+        </mat-card-actions><p> </p>
+        <mat-slide-toggle
+            color="primary"
+            (change)="this.onToggleTracer($event)"
+            class="example-margin"
+            [checked]="checked"
+            [disabled]="disabled">
+          Toggle Tracer
+        </mat-slide-toggle><p> </p>
+        <br>
+      </mat-expansion-panel>
+    </mat-accordion><p> </p>
+
+
+    <mat-accordion>
+      
       <mat-expansion-panel (opened)="panelOpenState = true"
                            (closed)="panelOpenState = false">
         <mat-expansion-panel-header>
@@ -86,7 +111,27 @@
                            (closed)="panelOpenState = false">
         <mat-expansion-panel-header>
           <mat-panel-title>
-            Colour intensity
+            Save & Load
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <button (click)="openSnackBar('Saving Polygons to firebase', 'Dismiss'); savePolygonsToFirebase()" color="primary" mat-raised-button>
+          Save Polygons
+        </button><p> </p>
+        <button (click)="retrievePolygonsFromFirebase(); openSnackBar('Retrieving Polygons to firebase', 'Dismiss')" color="primary" mat-raised-button>
+          Retrieve Polygons
+        </button><p> </p>
+        <button (click)="loadPolygonsFromFirebase()" color="primary" mat-raised-button>
+          Load Polygons
+        </button><p> </p>
+      </mat-expansion-panel>
+    </mat-accordion><p> </p>
+
+    <mat-accordion>
+      <mat-expansion-panel (opened)="panelOpenState = true"
+                           (closed)="panelOpenState = false">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Colour Intensity
           </mat-panel-title>
         </mat-expansion-panel-header>
         <button (click)="resetToDefault()" color="primary" mat-raised-button>
@@ -133,35 +178,7 @@
       </mat-expansion-panel>
     </mat-accordion><p> </p>
 
-    <mat-accordion>
-      <mat-expansion-panel (opened)="panelOpenState = true"
-                           (closed)="panelOpenState = false">
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            Mouse & Keyboard Controls
-          </mat-panel-title>
-        </mat-expansion-panel-header>
-        <mat-tab-group animationDuration="0ms">
-          <mat-tab label="Section ID">
-            <br>
-            <mat-form-field appearance="standard">
-              <mat-label>Brain ID</mat-label>
-              <input matInput placeholder="E.g. 4240">
-            </mat-form-field>
-            <mat-form-field appearance="standard">
-              <mat-label>Section No</mat-label>
-              <input matInput placeholder="E.g. 0025">
-            </mat-form-field>
-            <br>
-          </mat-tab>
-          <mat-tab label="Second">
-            <div class="example-small-box mat-elevation-z4">
-              Small content
-            </div>
-          </mat-tab>
-        </mat-tab-group><p> </p>
-      </mat-expansion-panel>
-    </mat-accordion><p> </p>
+    
 
   </mat-drawer>
 
