--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,10 @@
-mat-slider {
+.mat-slider {
   width: 300px;
 }
 
 .mat-form-field {
   margin-right: 12px;
 }
-
 
 .example-form {
   min-width: 150px;
@@ -38,19 +37,13 @@ mat-slider {
 
 .example-sidenav-content {
   display: flex;
-  height: 100%;
+  width: 100%;
   align-items: center;
   justify-content: center;
-  overflow-y: auto;
-  overflow: auto;
-  overscroll-behavior-y: contain;
 }
 
 .example-sidenav {
   padding: 20px;
-  overflow-y: auto;
-  overflow: auto;
-  overscroll-behavior-y: contain;
 }
 
 .example-card {
@@ -88,7 +81,6 @@ mat-slider {
   height: 100px;
   width: 50px;
 }
-
 
 /* Slide toggle */
 .example-h2 {
