--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,59 +1,20 @@
 <div>
 	<mat-sidenav-container class="example-container">
-		<mat-sidenav #sidenav1 mode="side" position="end" role="navigation" class="example-sidenav">
+    <!--
+		<mat-sidenav #sidenav7 mode="side" position="end" role="navigation" class="example-sidenav">
         <br /><br />
         <mat-card-header>
           <mat-card-title>Development Tools</mat-card-title>
         </mat-card-header><p> </p>
-        <mat-accordion>
-          <mat-expansion-panel (opened)="panelOpenState = true"
-                              (closed)="panelOpenState = false">
-            <mat-expansion-panel-header>
-              <mat-panel-title>
-                Annotation Tools
-              </mat-panel-title>
-            </mat-expansion-panel-header>
-            <p> </p>
-            <button (click)="this.addInteraction('Point')" mat-raised-button>
-              Point
-            </button><p> </p>
-            <button (click)="this.addInteraction('LineString')" mat-raised-button>
-              LineString
-            </button><p> </p>
-            <button (click)="this.addInteraction('Polygon')" mat-raised-button>
-              Polygon
-            </button><p> </p>
-            <button (click)="this.addInteraction('Circle')" mat-raised-button>
-              Circle
-            </button><p> </p>
-            <button (click)="this.removeInteraction()" mat-raised-button color="primary" aria-label="Example icon button with a menu icon">
-                <mat-icon>clear</mat-icon>
-            </button><p> </p><button (click)="this.deleteDrawing()" mat-raised-button color="primary" aria-label="Example icon button with a menu icon">
-                <mat-icon>delete</mat-icon>
-            </button>
-          </mat-expansion-panel>
-        </mat-accordion><p> </p>
-        <mat-accordion>
-          <mat-expansion-panel (opened)="panelOpenState = true"
-                              (closed)="panelOpenState = false">
-            <mat-expansion-panel-header>
-              <mat-panel-title>
-                Union Difference
-              </mat-panel-title>
-            </mat-expansion-panel-header>
-            <button (click)="this.addPolygons()" mat-raised-button>
-              Add Polygon
-            </button><p> </p>
-            <button (click)="this.erasePolygons()" mat-raised-button>
-              Erase Polygon
-            </button><p> </p>
-            <button (click)="this.combine()" mat-raised-button color="primary" aria-label="Example icon button with a menu icon">
-                  <mat-icon>track_changes</mat-icon>
-                  Combine
-            </button>
-          </mat-expansion-panel>
-        </mat-accordion><p> </p>
-
+        <button (click)="this.deleteDrawing()" mat-raised-button>
+          <mat-icon>undo</mat-icon>
+        </button>&nbsp;
+        <button (click)="this.redoDrawing()" mat-raised-button>
+          <mat-icon>redo</mat-icon>
+        </button>&nbsp;
+        <button color="accent" (click)="sidenav1.toggle(); sidenav7.toggle()" mat-raised-button>
+          Toggle <mat-icon>toggle_off</mat-icon>
+        </button><p> </p>
         <mat-accordion>
           <mat-expansion-panel (opened)="panelOpenState = true"
                               (closed)="panelOpenState = false">
@@ -85,7 +46,66 @@
               max="100"></mat-slider><p> </p>
           </mat-expansion-panel>
         </mat-accordion><p> </p>
-		</mat-sidenav>
+    </mat-sidenav>-->
+    
+    <mat-sidenav #sidenav1 opened mode="side" position="end" role="navigation" class="example-sidenav">
+      <center>
+        <button mat-icon-button color="accent">
+          <mat-icon>build</mat-icon>
+        </button>
+      </center><p> </p>
+      
+      <hr style="height:2px;border-width:0;color:gray;background-color:gray"><p> </p>
+      <!--<button mat-mini-fab color="accent" (click)="sidenav1.toggle(); sidenav7.toggle()" mat-raised-button>
+        <mat-icon>toggle_on</mat-icon>
+      </button><p> </p>-->
+      <mat-accordion>
+        <mat-expansion-panel (opened)="panelOpenState = true"
+                            (closed)="panelOpenState = false">
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              <mat-icon>create</mat-icon>
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <button (click)="this.addInteraction('Point')" mat-raised-button>
+            <mat-icon>group_work</mat-icon>
+          </button><p> </p>
+          <button (click)="this.addInteraction('LineString')" mat-raised-button>
+            <mat-icon>clear_all</mat-icon>
+          </button><p> </p>
+          <button (click)="this.addInteraction('Polygon')" mat-raised-button>
+            <mat-icon>change_history</mat-icon>
+          </button><p> </p>
+          <button (click)="this.addInteraction('Circle')" mat-raised-button>
+            <mat-icon>circle</mat-icon>
+          </button><p> </p>
+          <button (click)="this.removeInteraction()" mat-raised-button color="primary" aria-label="Example icon button with a menu icon">
+              <mat-icon>clear</mat-icon>
+          </button><p> </p><button (click)="this.deleteDrawing()" mat-raised-button color="primary" aria-label="Example icon button with a menu icon">
+              <mat-icon>delete</mat-icon>
+          </button>
+        </mat-expansion-panel><p> </p>
+
+        <mat-expansion-panel (opened)="panelOpenState = true"
+                            (closed)="panelOpenState = false">
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              <mat-icon>add_circle</mat-icon>
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <button (click)="this.addPolygons()" mat-raised-button>
+            <mat-icon>add_circle</mat-icon>
+          </button><p> </p>
+          <button (click)="this.erasePolygons()" mat-raised-button>
+            <mat-icon>remove_circle</mat-icon>
+          </button><p> </p>
+          <button (click)="this.combine()" mat-raised-button color="primary" aria-label="Example icon button with a menu icon">
+            <mat-icon>swap_horizontal</mat-icon>
+          </button>
+        </mat-expansion-panel><p> </p>
+      </mat-accordion>
+    </mat-sidenav>
+
 		<mat-sidenav-content>
 			<mat-sidenav-container class="example-container">
 				<mat-sidenav #sidenav2 mode="side" position="start" role="navigation" class="example-sidenav">
@@ -97,7 +117,7 @@
               </button>
             </center><br />
             <mat-accordion>
-              <mat-expansion-panel (opened)="panelOpenState = true"
+              <mat-expansion-panel #panel1 (opened)="panelOpenState = true; "
                                    (closed)="panelOpenState = false">
                 <mat-expansion-panel-header>
                   <mat-panel-title>
@@ -107,11 +127,11 @@
                 <br>
                 <mat-form-field appearance="standard">
                   <mat-label>Brain ID</mat-label>
-                  <input matInput placeholder="E.g. 0025">
+                  <input matInput placeholder="E.g. 4240">
                 </mat-form-field><br />
                 <mat-form-field appearance="standard">
                   <mat-label>Section No</mat-label>
-                  <input (change)="this.emailUpdated($event)" matInput placeholder="E.g. 0025">
+                  <input (change)="this.emailUpdated($event)" matInput placeholder="E.g. 25">
                 </mat-form-field><p> </p>
                 <mat-slide-toggle
                     color="primary"
@@ -125,11 +145,8 @@
                   <button (click)="this.brainIDUpdated()" color="primary" mat-raised-button>Load</button>
                 </mat-card-actions><p> </p>
                 <br>
-              </mat-expansion-panel>
-            </mat-accordion><p> </p>
-
-            <mat-accordion>
-              <mat-expansion-panel (opened)="panelOpenState = true"
+              </mat-expansion-panel><p></p>
+              <mat-expansion-panel #panel2 (opened)="panelOpenState = true"
                                    (closed)="panelOpenState = false">
                 <mat-expansion-panel-header>
                   <mat-panel-title>
@@ -152,13 +169,103 @@
                         <input class="form-control search-input" (change)="this.Tree($event);" matInput placeholder="E.g. Hypothalamus">
                       </mat-form-field>
                    </div>
-                  <div style="white-space: nowrap; font-size: 17px; font-family: 'Big Shoulders Stencil Display', cursive; font-family: 'Roboto', sans-serif;" id='atlas_info'></div>
+                  <div style="white-space: nowrap; font-family: 'Big Shoulders Stencil Display', cursive; font-family: 'Roboto', sans-serif;" id='atlas_info'></div>
                 </div>
-              </mat-expansion-panel>
-            </mat-accordion><p> </p>
-        
-            <mat-accordion>
+              </mat-expansion-panel><p></p>
               <mat-expansion-panel (opened)="panelOpenState = true"
+                                   (closed)="panelOpenState = false">
+                <mat-expansion-panel-header>
+                  <mat-panel-title>
+                    Injection Region
+                  </mat-panel-title>
+                </mat-expansion-panel-header>
+              </mat-expansion-panel><p></p>
+              <mat-expansion-panel (opened)="panelOpenState = true"
+                                   (closed)="panelOpenState = false">
+                <mat-expansion-panel-header>
+                  <mat-panel-title>
+                    Process Annotation
+                  </mat-panel-title>
+                </mat-expansion-panel-header>
+              </mat-expansion-panel><p></p>
+              <mat-expansion-panel (opened)="panelOpenState = true"
+                                   (closed)="panelOpenState = false">
+                <mat-expansion-panel-header>
+                  <mat-panel-title>
+                    Point Annotation
+                  </mat-panel-title>
+                </mat-expansion-panel-header>
+              </mat-expansion-panel><p></p>
+              
+                  <mat-expansion-panel (opened)="panelOpenState = true"
+                                      (closed)="panelOpenState = false">
+                    <mat-expansion-panel-header>
+                      <mat-panel-title>
+                        Development Tools
+                      </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <mat-accordion>
+                      <mat-expansion-panel (opened)="panelOpenState = true"
+                                      (closed)="panelOpenState = false">
+                    <mat-expansion-panel-header>
+                      <mat-panel-title>
+                        REPL
+                      </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <mat-card-content>
+                      <form>
+                        <mat-form-field mat-form-field appearance="standard">
+                          <input type="text"
+                                id = "replID"
+                                placeholder="Command line"
+                                aria-label="Number"
+                                matInput
+                                [formControl]="myControl"
+                                [matAutocomplete]="auto">
+                          <mat-autocomplete #auto="matAutocomplete">
+                            <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                              {{option}}
+                            </mat-option>
+                          </mat-autocomplete>
+                        </mat-form-field>
+                      </form>
+                      <mat-card-actions>
+                        <button color="primary" (click)="this.REPL()" mat-raised-button>Run Command</button>
+                      </mat-card-actions>
+                    </mat-card-content>
+                  </mat-expansion-panel><p> </p>
+
+                  <mat-expansion-panel (opened)="panelOpenState = true"
+                                (closed)="panelOpenState = false">
+                    <mat-expansion-panel-header>
+                      <mat-panel-title>
+                        Colour Intensity
+                      </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <button (click)="resetToDefault()" color="primary" mat-raised-button>
+                      Reset to default
+                    </button><p> </p>
+                    Invert
+                    <mat-slider
+                      thumbLabel
+                      (change)="this.onInvertChange($event)"
+                      min="1"
+                      max="100"></mat-slider><p> </p>
+                    Hue
+                    <mat-slider
+                      thumbLabel
+                      (change)="this.onHueChange($event)"
+                      min="0"
+                      max="360"></mat-slider><p> </p>
+                    Saturation
+                    <mat-slider
+                      thumbLabel
+                      (change)="this.onSaturationChange($event)"
+                      min="1"
+                      max="100"></mat-slider><p> </p>
+                  </mat-expansion-panel><p> </p>
+
+                  <mat-expansion-panel (opened)="panelOpenState = true"
                                    (closed)="panelOpenState = false">
                 <mat-expansion-panel-header>
                   <mat-panel-title>
@@ -173,42 +280,13 @@
                     [disabled]="disabled">
                   GeoJSON
                 </mat-slide-toggle><p> </p>
-              </mat-expansion-panel>
-            </mat-accordion><p> </p>
-        
-            <mat-accordion>
-              <mat-expansion-panel (opened)="panelOpenState = true"
-                                   (closed)="panelOpenState = false">
-                <mat-expansion-panel-header>
-                  <mat-panel-title>
-                    REPL
-                  </mat-panel-title>
-                </mat-expansion-panel-header>
-                <mat-card-content>
-                  <form>
-                    <mat-form-field mat-form-field appearance="standard">
-                      <input type="text"
-                            id = "replID"
-                            placeholder="Command line"
-                            aria-label="Number"
-                            matInput
-                            [formControl]="myControl"
-                            [matAutocomplete]="auto">
-                      <mat-autocomplete #auto="matAutocomplete">
-                        <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-                          {{option}}
-                        </mat-option>
-                      </mat-autocomplete>
-                    </mat-form-field>
-                  </form>
-                  <mat-card-actions>
-                    <button color="primary" (click)="this.REPL()" mat-raised-button>Run Command</button>
-                  </mat-card-actions>
-                </mat-card-content><p> </p>
-              </mat-expansion-panel>
-            </mat-accordion><p> </p>
-      
+              </mat-expansion-panel><p></p>
+                </mat-accordion>
+              </mat-expansion-panel><p> </p>
 
+
+              
+            </mat-accordion><p> </p>
 
 					</div>
 
@@ -218,17 +296,17 @@
               <button mat-icon-button class="example-icon" (click)="sidenav2.toggle()"  aria-label="Example icon-button with menu icon">
                 <mat-icon>menu</mat-icon>
               </button>
-              <span>Next Gen Viewer</span>
+              <span>Next Gen Viewer</span>&nbsp;&nbsp;
+              <!--<button (click)="this.deleteDrawing()" mat-raised-button>
+                <mat-icon>undo</mat-icon>
+              </button>&nbsp;
+              <button (click)="this.redoDrawing()" mat-raised-button>
+                <mat-icon>redo</mat-icon>
+              </button>&nbsp;
+              <button color="accent" (click)="sidenav1.toggle(); sidenav7.toggle()" mat-raised-button>
+                Toggle <mat-icon>settings</mat-icon>
+              </button>&nbsp;-->
               <span class="example-spacer"></span>
-                <button (click)="this.deleteDrawing()" mat-raised-button>
-                  <mat-icon>undo</mat-icon>
-                </button>&nbsp;
-                <button (click)="this.redoDrawing()" mat-raised-button>
-                  <mat-icon>redo</mat-icon>
-                </button>&nbsp;
-                <button color="accent" (click)="sidenav1.toggle()" mat-raised-button>
-                  Toggle <mat-icon>settings</mat-icon>
-                </button>&nbsp;
               <p>  </p>
               <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
               <mat-icon>share</mat-icon>
