--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -33,6 +33,7 @@
 .example-container {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .example-sidenav-content {
@@ -40,10 +41,12 @@
   width: 100%;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 .example-sidenav {
   padding: 20px;
+  overflow: hidden;
 }
 
 .example-card {
